# OMVision-api

./: Dockerfile  README.md  auth.py  config.py  database.py  deploy.sh  main.py  models.py  pyproject.toml  requirements.txt
routes/company/: all_company.py  company_by_id.py  edit_company_comment.py  edit_company_relevance.py  hide_companies.py
routes/list/: create_list.py  delete_list.py  get_all_entities_by_list.py  get_all_lists.py  modify_entities_in_list.py
routes/people/: all_people.py  edit_person_comment.py  edit_person_relevance.py  hide_people.py  people_by_id.py
routes/search/: all_search.py  search_by_id.py
routes/signals/: all_signals.py  signal_by_id.py
